# python-sdk

examples/clients/simple-notebook-client/: README.md  pyproject.toml
examples/clients/simple-notebook-client-aggregated/: README.md  pyproject.toml
examples/clients/simple-notebook-client-aggregated/mcp_simple_notebook_client_aggregated/: __init__.py  main.py
examples/clients/simple-notebook-client/mcp_simple_notebook_client/: __init__.py  main.py
examples/servers/simple-notebook/: README.md  pyproject.toml
examples/servers/simple-notebook/mcp_simple_notebook/: __init__.py  __main__.py  auth_server.py  notebook_provider.py  server.py  token_verifier.py
src/mcp/client/auth/: oauth2.py
src/mcp/server/: sse.py  streamable_http.py  streamable_http_manager.py
src/mcp/server/auth/: routes.py  tool_scopes.py
src/mcp/server/auth/handlers/: authorize.py
src/mcp/server/fastmcp/: server.py
src/mcp/server/fastmcp/tools/: base.py  tool_manager.py
src/mcp/server/lowlevel/: server.py
tests/server/fastmcp/auth/: test_tool_scopes.py
